--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,23 @@
   justify-content: center;
   width: 100%;
   min-height: 100vh;
-  background-color: antiquewhite;
+  background-color: #f8f9ff;
 }
+a{
+  text-decoration: none;
+  color: white;
+}
+
+button{
+  border: none;
+  padding: 8px;
+  letter-spacing: 1.5px;
+  background-color: transparent;
+  transition-duration: 0.5s;
+}
+button:hover{
+  background-color: rgba(0, 0, 0, 0.11);
+}
+
+
 
