--- a/src/components/home/Home.module.scss
+++ b/src/components/home/Home.module.scss
@@ -1,19 +1,12 @@
 .main {
   width: 100%;
   height: 100%;
-  border: 1px solid blueviolet;
 
   .container {
-    border: 2px solid #21ff00;
-    .filters_container{
 
-      .filters{
-
-      }
-    }
-
-    .news_container{
-
+    .filters_container {
+      background-color: rgba(126, 166, 255, 0.29);
+      padding: 25px;
     }
   }
 }
