--- a/src/filters/categories/Categories.module.scss
+++ b/src/filters/categories/Categories.module.scss
@@ -1,20 +1,21 @@
 .categories_container {
   display: flex;
-  justify-content: center;
+  justify-content: left;
   flex-wrap: wrap;
-  margin-top: 25px;
+  margin-top: 35px;
 
   .category_item {
     font-weight: normal;
     letter-spacing: 1px;
-    text-transform: uppercase;
     margin: 5px;
-    background-color: rgba(0, 0, 0, 0.46);
-    box-shadow: 2px 2px 4px black;
     padding: 10px;
     position: relative;
     color: rgba(0, 0, 0, 0.66);
     cursor: pointer;
+    &:hover{
+      color: #ffffff;
+      text-shadow: 1px 1px 5px #ffffff;
+    }
     &::after {
       content: "";
       position: absolute;
