--- a/src/filters/countries/Countries.module.scss
+++ b/src/filters/countries/Countries.module.scss
@@ -1,8 +1,10 @@
 .countries_container {
   display: flex;
   justify-content: center;
+  flex-direction: column;
   flex-wrap: wrap;
   margin: 15px;
+
 }
 
 .country_container {
@@ -10,19 +12,21 @@
   margin-left: 25px;
   padding: 5px;
 
+
+
   .country_item {
     border-radius: 10px;
     box-shadow: 1px 2px 17px black;
     transition-duration: 0.5s;
     height: 60px;
     &.active{
-      box-shadow: 1px 2px 17px red;
+      box-shadow: 1px 2px 17px rgb(255, 247, 64);
     }
   }
 
   &:hover {
     .country_item {
-      box-shadow: 1px 2px 17px red;
+      box-shadow: 2px 2px 17px #ffffff;
     }
   }
 }
