--- a/src/components/about/About.module.scss
+++ b/src/components/about/About.module.scss
@@ -1,4 +1,9 @@
 .about{
+  font-family: "Aria" , sans-serif;
+  font-size: 1rem;
   height: 100%;
-
+  width: 80%;
+  text-align: left;
+  letter-spacing: 1px;
+  margin-top: 2%;
 }
