--- a/src/components/home/Home.module.scss
+++ b/src/components/home/Home.module.scss
@@ -1,41 +1,14 @@
 .main {
   width: 100%;
   height: 100%;
+  background-color: rgba(255, 193, 0, 0.11);
 
   .container {
-
-    .filters_container {
-      background-color: rgba(93, 51, 0, 0.41);
-      padding: 25px;
-
-    }
-
     .filters {
-
-      details {
-        summary {
-          list-style: none;
-          padding-left: 1.5em;
-          letter-spacing: 1px;
-        }
-        &:hover {
-          color: #ffffff;
-          text-shadow: 1px 1px 5px #ffffff;
-        }
-        transition-duration: 0.5s;
-        cursor: pointer;
-        max-width: 100%;
-        backdrop-filter: blur(5px);
-        position: absolute;
-        margin: 5px;
-        top: 5.5em;
-        left: 0;
-        font-size: 1em;
-        padding: 10px;
-        letter-spacing: 1px;
-        z-index: 1;
-      }
     }
   }
 }
-
+.source{
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
