--- a/src/components/home/Home.module.scss
+++ b/src/components/home/Home.module.scss
@@ -1,25 +1,32 @@
 .main {
   width: 100%;
   height: 100%;
-  background-color: rgba(255, 193, 0, 0.11);
+
 
   .container {
-    margin: 5px;
+    display: flex;
+    flex-direction: column;
+
     .filters {
       display: flex;
       flex-wrap: wrap;
-      //margin: 5px;
+      justify-content: center;
+
       .filters_container{
         display: flex;
         justify-content: center;
         flex-direction: column;
-        width: 40%;
-        border: 1px solid rgba(0, 0, 0, 0.25);
+        width: 39%;
+        background-color: rgba(255, 192, 0, 0.06);
 
       }
       .exchange_container{
         width: 20%;
-        border: 1px solid rgba(0, 0, 0, 0.25);
+        background-color: rgba(255, 193, 0, 0.11);
+      }
+      .weather_container{
+        width: 41%;
+          background-color: rgba(220, 167, 2, 0.23);
       }
     }
   }
@@ -27,4 +34,21 @@
 .source{
   text-transform: uppercase;
   letter-spacing: 2px;
+}
+@media(max-width: 768px){
+  .main{
+    .container{
+      .filters{
+        .filters_container{
+          width: 100%;
+        }
+        .exchange_container{
+          width: 100%;
+        }
+        .weather_container{
+          width: 100%;
+        }
+      }
+    }
+  }
 }
