--- a/src/filters/categories/Categories.module.scss
+++ b/src/filters/categories/Categories.module.scss
@@ -1,12 +1,13 @@
 .categories_container {
   display: flex;
-  justify-content: left;
+  justify-content: center;
   flex-wrap: wrap;
+  margin-bottom: 10px;
 
   .category_item {
     font-weight: normal;
     letter-spacing: 1px;
-    margin: 5px;
+    margin: 2px;
     padding: 10px;
     position: relative;
     color: rgba(0, 0, 0, 0.66);
